@@ -1,8 +1,8 @@
 plugins {
     id 'application'
-    id 'org.jetbrains.kotlin.jvm' version '2.0.0-RC3'
-    id 'io.ktor.plugin' version '2.3.11'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '2.0.0-RC3'
+    id 'org.jetbrains.kotlin.jvm' version '2.0.21'
+    id 'io.ktor.plugin' version '3.0.0'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.0.21'
 }
 
 group ""
@@ -10,6 +10,11 @@ version "0.0.1"
 
 application{
     mainClassName = "io.ktor.server.netty.DevelopmentEngine"
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs("-Dnet.bytebuddy.experimental=true")
 }
 
 dependencies {
@@ -20,15 +25,16 @@ dependencies {
     implementation "io.ktor:ktor-server-auth-jvm:$ktor_version"
     implementation "io.ktor:ktor-server-auth-jwt-jvm:$ktor_version"
     implementation "io.ktor:ktor-server-netty-jvm:$ktor_version"
-    implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation("io.ktor:ktor-server-resources:$ktor_version")
 
+    implementation 'org.slf4j:slf4j-nop:2.0.16'
+
     testImplementation "io.ktor:ktor-server-tests-jvm:$ktor_version"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1"
+//    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.9.0"
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testImplementation "io.mockk:mockk:1.12.0"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-datetime:0.4.0"
+    testImplementation "io.mockk:mockk:1.13.3"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-datetime:0.6.1"
 
     implementation 'commons-codec:commons-codec:1.15'
 
@@ -41,13 +47,13 @@ dependencies {
     implementation 'com.github.aymanizz:ktor-i18n:2.0.0'
     implementation 'com.github.bodzio6978:fitness-app-common:1.3'
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.10.0")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.11.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-engine:5.11.2")
 
     // (Optional) If you need "Parameterized Tests"
-    testImplementation("org.junit.jupiter:junit-jupiter-params:5.10.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.11.2")
 
     // (Optional) If you also have JUnit 4-based tests
     testImplementation("junit:junit:4.13.2")
-    testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.10.0")
+    testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.11.2")
 }
